# udemy_cg-with-ogl

./: CMakeLists.txt  README.md  compile_and_run.sh  conanfile.txt  install.sh
src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
